force-app/main/default/objects/Case_Owner_History__c/Case_Owner_History__c.object-meta.xml
<CustomObject>
    <description>This object was created to allow the training support center to report on agent efficiency and workload. The object tracks how long agents own cases and how long queues own cases.</description>
    <label>Case Owner History</label>
    <nameField>
        <displayFormat>COH-{000000}</displayFormat>
        <label>Case Owner History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Owner History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>