force-app/main/default/objects/Case_Owner_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Owner History</relationshipLabel>
    <relationshipName>Case_Owner_History</relationshipName>
    <type>Lookup</type>
</CustomField>