force-app/main/default/objects/Case_Owner_History__c/fields/Case_Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Date_Time__c</fullName>
    <formula>Case__r.ClosedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>