force-app/main/default/objects/Case_Owner_History__c/fields/Case_Owner_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Duration_Seconds__c</fullName>
    <formula>(Handed_Off__c - Received__c) *24*3600</formula>
    <label>Case Owner Duration(Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>