force-app/main/default/objects/Case_Owner_History__c/fields/COH_Role__c.field-meta.xml
<CustomField>
    <fullName>COH_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <inlineHelpText>This field displays the role of the user who made the ownership change on the case.</inlineHelpText>
    <label>COH Role</label>
    <type>Text</type>
</CustomField>