force-app/main/default/objects/Case_Owner_History__c/fields/Hand_Off_Status__c.field-meta.xml
<CustomField>
    <fullName>Hand_Off_Status__c</fullName>
    <inlineHelpText>This is the status of the case when the ownership is handed off.</inlineHelpText>
    <label>Hand Off Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>