force-app/main/default/objects/Case_Owner_History__c/fields/Handed_Off__c.field-meta.xml
<CustomField>
    <fullName>Handed_Off__c</fullName>
    <description>This is the time the Owner transferred this Case to another User or Queue.</description>
    <label>Handed Off</label>
    <type>DateTime</type>
</CustomField>