force-app/main/default/objects/Case_Owner_History__c/fields/Owner_Duration__c.field-meta.xml
<CustomField>
    <fullName>Owner_Duration__c</fullName>
    <description>This field takes the duration__c and turns it into a readable time.</description>
    <formula>IF ((Handed_Off__c - Received__c)&gt; 0, 
TEXT(FLOOR((Handed_Off__c - Received__c))) &amp; &quot;:&quot; &amp; 
TEXT(FLOOR( 24 * ((Handed_Off__c - Received__c) - FLOOR((Handed_Off__c - Received__c))))) &amp; &quot;:&quot; &amp; 
TEXT(ROUND(60 * (ROUND( 24 * ((Handed_Off__c - Received__c)-FLOOR((Handed_Off__c - Received__c))),8) - FLOOR( 
ROUND( 24 * ((Handed_Off__c - Received__c)- FLOOR((Handed_Off__c - Received__c))),8)) ),0))&amp; &quot;:&quot; &amp; 
TEXT(Round(60*(((Handed_Off__c - Received__c) *1440) - FLOOR(((Handed_Off__c - Received__c) *1440))),0)) 
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Duration</label>
    <type>Text</type>
</CustomField>