force-app/main/default/objects/Case_Owner_History__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <inlineHelpText>This is the user who was the case owner for the duration of time outlined in the Case Duration field.</inlineHelpText>
    <label>Case Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>