force-app/main/default/objects/Case_Owner_History__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <description>This is the time the Owner received this Case.</description>
    <label>Received</label>
    <type>DateTime</type>
</CustomField>