force-app/main/default/objects/Case_Owner_History__c/fields/Recieved_Case_status__c.field-meta.xml
<CustomField>
    <fullName>Recieved_Case_status__c</fullName>
    <inlineHelpText>This is the case status at the time the COH record was created.</inlineHelpText>
    <label>Recieved Case status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>